<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_1_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tic_tac_toe"
        android:textColor="#F9F9FC"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Name_player1"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="8"
        android:inputType="textPersonName"
        android:autofillHints="@string/player1"
        android:text = "@string/player1"
        android:hint = "@string/player1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:maxLength="8"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1" />

    <EditText
        android:id="@+id/Name_player2"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/player2"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/player2"
        android:inputType="textPersonName"
        android:text="@string/player2"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:maxLength="8"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/player1"
        android:textColor="#AFC8FA"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="@+id/Name_player1"
        app:layout_constraintStart_toStartOf="@+id/Name_player1"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/player2"
        android:textColor="#AFC8FA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Name_player2"
        app:layout_constraintStart_toStartOf="@+id/Name_player2"
        app:layout_constraintTop_toBottomOf="@+id/Name_player1" />

    <Button
        android:id="@+id/start"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:backgroundTint="#11304E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name_player2" />


</androidx.constraintlayout.widget.ConstraintLayout>