<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1_edit"
    tools:context=".WinnerPage">

    <TextView
        android:id="@+id/p1"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/player1"
        android:textColor="#AFC8FA"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/p2"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="36dp"
        android:text="@string/player2"
        android:textColor="#AFC8FA"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/o_symbol"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/o"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:flow_horizontalBias="0.500"
        app:layout_constraintEnd_toEndOf="@+id/p1"
        app:layout_constraintStart_toStartOf="@+id/p1"
        app:layout_constraintTop_toBottomOf="@+id/p1" />

    <TextView
        android:id="@+id/x_symbol"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/x"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        app:flow_horizontalBias="0.500"
        app:layout_constraintEnd_toEndOf="@+id/p2"
        app:layout_constraintStart_toStartOf="@+id/p2"
        app:layout_constraintTop_toBottomOf="@+id/p2" />

    <GridLayout
        android:id="@+id/game_grid"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:columnCount="3"
        android:rowCount="3"
        android:padding="6dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:background="#B1B2B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/b00"
            android:text=""
            android:layout_row="0"
            android:layout_column="0"
            style="@style/myButtons1"
            />

        <Button
            android:id="@+id/b01"
            android:text=""
            android:layout_row="0"
            android:layout_column="1"
            style="@style/myButtons1"
            />

        <Button
            android:id="@+id/b02"
            android:text=""
            android:layout_row="0"
            android:layout_column="2"
            style="@style/myButtons1"
            />


        <Button
            android:id="@+id/b10"
            android:text=""
            android:layout_row="1"
            android:layout_column="0"
            style="@style/myButtons1"
            />

        <Button
            android:id="@+id/b11"
            android:text=""
            android:layout_row="1"
            android:layout_column="1"
            style="@style/myButtons1"
            />

        <Button
            android:id="@+id/b12"
            android:text=""
            android:layout_row="1"
            android:layout_column="2"
            style="@style/myButtons1"
            />


        <Button
            android:id="@+id/b20"
            android:text=""
            android:layout_row="2"
            android:layout_column="0"
            style="@style/myButtons1"
            />

        <Button
            android:id="@+id/b21"
            android:text=""
            android:layout_row="2"
            android:layout_column="1"
            style="@style/myButtons1"
            />

        <Button
            android:id="@+id/b22"
            android:text=""
            android:layout_row="2"
            android:layout_column="2"
            style="@style/myButtons1"
            />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>